Prevent "auto dark mode" extensions
This site supports dark mode by design, and they just mess things up.
Currently prevents chromium#enable-force-dark and DarkReader

--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,7 @@ body, html {
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #131313;
+        color-scheme: dark;
     }
 
     .profile, p {
